[package]
name = "day_two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-harder]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
indexmap = "2.1.0"
phf = { version = "0.11.2", features = ["macros"] }
